--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,1 +1,155 @@
+@import url('https://fonts.googleapis.com/css?family=Space+Mono:400,400i');
 @import 'reset';
+
+$body-color : #282828;
+$main-color : #FC2F36;
+
+$main-font: 'Work Sans', sans-serif;
+$mono-font : 'Space Mono', monospace;
+
+
+body {
+    font-family: $main-font, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 1.5;
+    -webkit-font-smoothing : antialiased;
+    text-rendering: geometricprecision;
+}
+
+
+a {
+    color : $main-color;
+}
+
+
+.rdwn-container-grid {
+    display : block;
+    padding : 2em;
+    // flex-flow : row nowrap;
+    max-width : 100em;
+    position: relative;
+    margin: 0 auto;
+
+    .header {
+        font-size : 1em;
+        font-family: $mono-font;
+        text-decoration : none;
+    }
+
+
+}
+
+
+.xmasonry {
+    
+    // grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    // grid-gap : 4em;
+    margin-top: 2em;
+
+    .xblock {
+
+        .rdwn-blog-post {
+            padding : 2em;
+            padding-left: 0;
+            padding-top: 0;
+
+            .date {
+                font-family: $mono-font;
+                font-size : .825em;
+                color : #555;
+            }
+            
+
+            a {
+                text-decoration: none;
+    
+                .title {
+                    font-size : 2em;
+                    font-weight : 700;
+                    line-height : 1.25;
+                    margin : 4px 0 8px;
+                    color : #28282a;
+                    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+
+                    &.design {
+                        color : #E53A3A;
+                        font-size : 2.125em;
+                    }
+
+                    &.thought {
+                        color :#624487;
+                        font-size : 1.8em;
+                    }
+
+                    &.junk {
+                        color : #24282a;
+                        font-size : 1.4em;
+                    }
+
+                    &:hover {
+                        color : $main-color;
+                    }
+                }
+            }
+
+            p {
+                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                font-size : 1.075em;
+                line-height: 1.5;
+            }
+    
+        }
+
+    }
+}
+
+
+
+.post-details-container {
+    max-width : 70em;
+    margin: 0 auto;
+    margin-top : 10em;
+    position : relative;
+
+    .title {
+        max-width : 40em;
+        font-size : 2.125em;
+        font-weight : 700;
+        text-align: center;
+        line-height : 1.25;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .mainContent {
+        margin-top : 5em;
+
+        .textContent {
+            max-width : 40em;
+            margin : 0 auto;
+            position : relative;
+            margin-top : 2.5em;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+            h2 {
+                font-weight : 600;
+                font-size : 1.2em;
+                margin-bottom  : 8px;
+            }
+
+
+            p {
+                font-size: 1.225em;
+                line-height: 1.6;
+                margin-bottom : 1.5em;
+            }
+
+
+        }
+    }
+}
+
+
+.gatsby-image-wrapper {
+    max-width: 60em;
+    margin: 0 auto;
+}
