--- a/src/css/main.css
+++ b/src/css/main.css
@@ -358,22 +358,14 @@ a {
     .xmasonry .xblock .rdwn-blog-post a {
       text-decoration: none; }
       .xmasonry .xblock .rdwn-blog-post a .title {
-        font-size: 2em;
+        color: #151515;
+        font-size: 2.125em;
         font-weight: 700;
         line-height: 1.25;
         margin: 4px 0 8px;
-        color: #28282a;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
-        .xmasonry .xblock .rdwn-blog-post a .title.design {
-          color: #E53A3A;
-          font-size: 2.125em; }
-        .xmasonry .xblock .rdwn-blog-post a .title.thought {
-          color: #624487;
-          font-size: 1.8em; }
-        .xmasonry .xblock .rdwn-blog-post a .title.junk {
-          color: #24282a;
-          font-size: 1.4em; }
         .xmasonry .xblock .rdwn-blog-post a .title:hover {
+          text-decoration: underline;
           color: #FC2F36; }
     .xmasonry .xblock .rdwn-blog-post p {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
