--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -63,30 +63,15 @@ a {
                 text-decoration: none;
     
                 .title {
-                    font-size : 2em;
+                    color : #151515;
+                    font-size : 2.125em;
                     font-weight : 700;
                     line-height : 1.25;
                     margin : 4px 0 8px;
-                    color : #28282a;
                     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-
-                    &.design {
-                        color : #E53A3A;
-                        font-size : 2.125em;
-                    }
-
-                    &.thought {
-                        color :#624487;
-                        font-size : 1.8em;
-                    }
-
-                    &.junk {
-                        color : #24282a;
-                        font-size : 1.4em;
-                    }
-
                     &:hover {
+                        text-decoration: underline;
                         color : $main-color;
                     }
                 }
