--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Space+Mono:400,400i");
+@import url("https://use.typekit.net/zxk7tdc.css");
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0-modified | 20110126
    License: none (public domain)
@@ -326,10 +327,12 @@ textarea {
   padding: 0.2em 0; }
 
 body {
-  font-family: "Work Sans", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  text-rendering: geometricprecision; }
+  text-rendering: geometricprecision;
+  font-family: poppins, sans-serif;
+  font-weight: 300;
+  font-style: normal; }
 
 a {
   color: #FC2F36; }
@@ -363,14 +366,17 @@ a {
         font-weight: 700;
         line-height: 1.25;
         margin: 4px 0 8px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+        font-family: poppins, sans-serif;
+        font-weight: 600;
+        font-style: normal; }
         .xmasonry .xblock .rdwn-blog-post a .title:hover {
           text-decoration: underline;
           color: #FC2F36; }
     .xmasonry .xblock .rdwn-blog-post p {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-size: 1.075em;
-      line-height: 1.5; }
+      line-height: 1.5;
+      font-weight: 400; }
 
 .post-details-container {
   max-width: 70em;
@@ -383,20 +389,25 @@ a {
     font-weight: 700;
     text-align: center;
     line-height: 1.25;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+    font-family: poppins, sans-serif;
+    font-weight: 600;
+    font-style: normal; }
   .post-details-container .mainContent {
     margin-top: 5em; }
     .post-details-container .mainContent .textContent {
       max-width: 40em;
       margin: 0 auto;
       position: relative;
-      margin-top: 2.5em;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+      margin-top: 2.5em; }
       .post-details-container .mainContent .textContent h2 {
+        font-family: poppins, sans-serif;
         font-weight: 600;
+        font-style: normal;
         font-size: 1.2em;
         margin-bottom: 8px; }
       .post-details-container .mainContent .textContent p {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: 400;
         font-size: 1.225em;
         line-height: 1.6;
         margin-bottom: 1.5em; }
