--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,18 +1,39 @@
 @import url('https://fonts.googleapis.com/css?family=Space+Mono:400,400i');
+@import url("https://use.typekit.net/zxk7tdc.css");
 @import 'reset';
 
 $body-color : #282828;
 $main-color : #FC2F36;
 
-$main-font: 'Work Sans', sans-serif;
+$main-font: poppins;
 $mono-font : 'Space Mono', monospace;
+
+@mixin light-font {
+    font-family: poppins, sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+@mixin regular-font { 
+    font-family: poppins, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+@mixin bold-font {
+font-family: poppins, sans-serif;
+font-weight: 600;
+font-style: normal;
+}
 
 
 body {
-    font-family: $main-font, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    // font-family: $main-font, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
     line-height: 1.5;
     -webkit-font-smoothing : antialiased;
     text-rendering: geometricprecision;
+    @include light-font;
 }
 
 
@@ -68,7 +89,7 @@ a {
                     font-weight : 700;
                     line-height : 1.25;
                     margin : 4px 0 8px;
-                    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                    @include bold-font;
 
                     &:hover {
                         text-decoration: underline;
@@ -81,6 +102,7 @@ a {
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
                 font-size : 1.075em;
                 line-height: 1.5;
+                font-weight : 400;
             }
     
         }
@@ -102,7 +124,7 @@ a {
         font-weight : 700;
         text-align: center;
         line-height : 1.25;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        @include bold-font;
     }
 
     .mainContent {
@@ -113,16 +135,17 @@ a {
             margin : 0 auto;
             position : relative;
             margin-top : 2.5em;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
             h2 {
-                font-weight : 600;
+                @include bold-font;
                 font-size : 1.2em;
                 margin-bottom  : 8px;
             }
 
 
             p {
+                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                font-weight: 400;
                 font-size: 1.225em;
                 line-height: 1.6;
                 margin-bottom : 1.5em;
